<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.DistrictsFragment">

    <LinearLayout
        android:id="@+id/ll_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_var_date_kab"
        android:weightSum="3">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_odp"
            android:layout_width="120dp"
            android:layout_height="150dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            app:cardCornerRadius="@dimen/cardview_default_radius">

            <TextView
                android:id="@+id/txt_odp_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:layout_marginTop="10dp"
                android:text="@string/odp"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_odp_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/monitoring_man"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txt_odp_var_kab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="300" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_pdp"
            android:layout_width="120dp"
            android:layout_height="150dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            app:cardCornerRadius="@dimen/cardview_default_radius">

            <TextView
                android:id="@+id/txt_pdp_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:layout_marginTop="10dp"
                android:text="@string/pdp"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_pdp_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/patient_in_surveillance"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txt_pdp_var_kab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="300" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_positif"
            android:layout_width="120dp"
            android:layout_height="150dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            app:cardCornerRadius="@dimen/cardview_default_radius">

            <TextView
                android:id="@+id/txt_positif_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:layout_marginTop="10dp"
                android:text="@string/positive"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_positif_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/positive_covid_19"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txt_positif_var_kab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="300" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_status2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_status"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_sembuh"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="@dimen/cardview_default_radius">

            <TextView
                android:id="@+id/txt_sembuh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:layout_marginTop="10dp"
                android:text="@string/recover"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_sembuh_var_kab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="5dp"
                android:padding="5dp"
                android:textColor="@color/colorPrimary"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:text="300" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_meninggal"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="@dimen/cardview_default_radius">

            <TextView
                android:id="@+id/txt_meninggal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:layout_marginTop="10dp"
                android:text="@string/died"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_meninggal_var_kab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="5dp"
                android:padding="5dp"
                android:textColor="@color/colorPrimary"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:text="300" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <TextView
        android:id="@+id/txt_date_kab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nice_spinner"
        android:layout_toStartOf="@id/txt_var_date_kab"
        android:padding="15dp"
        android:text="@string/date"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_var_date_kab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nice_spinner"
        android:layout_alignParentEnd="true"
        android:paddingStart="0dp"
        android:paddingTop="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="15dp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        tools:text="22 April 1999" />

    <TextView
        android:id="@+id/kab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/districts"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/progress_bar_kab"
        style="@style/SpinKitView.Large.MultiplePulseRing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:SpinKit_Color="@color/colorSecondary" />

    <org.angmarch.views.NiceSpinner
        android:id="@+id/nice_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/kab"
        android:layout_margin="16dp"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold"
        app:entries="@array/regency_name" />
</RelativeLayout>